# FastReactorGen

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json
nc-frontend/: index.ts  index.tsx  theme.tsx  wasm_binding.ts
nc-frontend-wasm/: Cargo.toml
nc-frontend-wasm/src/: lib.rs
nc-sim/: Cargo.toml
nc-sim/src/: lib.rs  main.rs
nc-sim/src/model/: mod.rs  specification.rs
nc-sim/src/serialization/: mod.rs
nc-sim/src/serialization/ncpf/: mod.rs  ncpf11.rs  simplelibrary.rs
