[package]
name = "nc-frontend-wasm"
version = "0.1.0"
authors = ["Alissa Rao <lymia@lymiahugs.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"
console_error_panic_hook = "0.1.6"
web-sys = { version = "0.3.51", features = ["console"] }
wee_alloc = "0.4.5"
